# python-fx

./: .dockerignore  .gitignore  .isort.cfg  .pylintrc  Dockerfile  README.md  docker-compose.yaml  lint.sh  mypy.ini  nginx.conf  pyproject.toml
fx/: __init__.py  database.py  model.py  rates.py
tests/: conftest.py  test_api.py  test_model.py
tests/integration/: test_fixer.py
webapp/: Dockerfile  package.json  rollup.config.js
webapp/public/: global.css
webapp/src/: App.svelte  CurrencyInput.svelte  DynamicSelect.svelte  Modal.svelte  NewTrade.svelte  Trades.svelte  api.js
